--- a/paper/anecdotes.tex
+++ b/paper/anecdotes.tex
@@ -1,3 +1,3 @@
-In the results presented so far we have used a rigid definition of failure (core dumps and hangs). This is necessary in order to meaningfully quantify our results, but it does leave out a section of softer errors that we encountered during our testing. Not presented in our results is the fact that a large number of applications behaved in ways that seemed very odd and outside of what the developers most likely intended. We include a few examples primarily because they show the types of errors that developers could find when debugging their code using our method. Furthermore, they offer some interesting behaviors that seem worth mentioning even though they are not part of our proper results. Examples 1-4 found in Appendix D display some odd outputs for various calls. We made no attempt to uncover the source of these errors.
+In the results presented so far, we have used a rigid definition of failure (core dumps and hangs). This is necessary in order to meaningfully quantify our results, but it does leave out a section of softer errors that we encountered during our testing. Not presented in our results is the fact that a large number of applications behaved in ways that seemed very odd and outside of what the developers most likely intended. We include a few examples primarily because they show the types of errors that developers could find when testing their programs using the techniques described here. Examples 1-4 found in Appendix \ref{appendix:anecdotes} display aberrant outputs for various calls. No attempts were made to uncover the source of these errors. Nevertheless, these types of behaviors should be of particular interest to the developers of these projects, as they represent inexplicable user-facing behavior that may lessen user trust in the application.
 
-Example 1 displays a particular invocation of VLC Media Player while fuzzing the value returned by \texttt{read}. It is easy to see that the video output is garbled. In Example 2 we see strange behavior with Eclipse when fuzzing the return value of \texttt{open}. A variety of font colors are missing and the white background of the main editing window is black. Example 3 shows garbled output in the tab bar of Firefox when fuzzing the return value of \texttt{open}. Not shown in this picture is that all of Firefox's menus and toolbars produced similarly garbled output. Finally, Example 4 shows an error produced by gvim when fuzzing the return value of \texttt{mmap}. This example is especially odd and requires a bit of explanation. First gvim reported a variety of errors (seen in the picture) followed by opening the document (\texttt{test.c}) in the terminal version of vim. Upon exiting, the shell was broken. We could not enter text and whenever we pressed enter, the line of text ``\texttt{[samplawski@rockhopper-09]}" was printed out, which is seen at the bottom of the picture. This could only be resolved by exiting the terminal application.
+Example 1 displays a particular invocation of VLC Media Player while fuzzing the value returned by \texttt{read}. It is easy to see that the video output is garbled. In Example 2 we see strange behavior with Eclipse when fuzzing the return value of \texttt{open}. A variety of font colors are missing and the white background of the main editing window is black. Example 3 shows garbled output in the tab bar of Firefox when fuzzing the return value of \texttt{open}. Not shown in this screenshot is that all of Firefox's menus and toolbars produced similarly garbled output. Finally, Example 4 shows an error produced by gvim when fuzzing the return value of \texttt{mmap}. At first, gvim reported a variety of errors (seen in the screenshot) followed by opening the document (\texttt{test.c}) in the terminal version of vim. Upon exiting, the shell was broken: text could not be entered, and pressing Enter caused the bash command prompt to be printed, which is seen at the bottom of the screenshot. This could only be resolved by exiting the terminal application.
