--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,5 +1,7 @@
-Many commonly used C library functions return some value. In most cases, these values indicate something that is relevant to the  functions operations, such as a file descriptor, number of bytes processed, or a pointer to some data. Additionally, many functions that can fail return some predefined value that indicates that an error occurred during the function's execution. Unfortunately, many programmers have the bad habit of not checking these return values for such error conditions, which can lead to unexpected behaviors. In our work, we implemented a mechanism to intercept system/library calls in order to force an error value to be returned to an application. By analyzing how common Linux applications respond (or didn't) to these errors, we were able to evaluate the robustness of these applications.
+Many commonly used C library functions return some value. In most cases, this value indicates something that is relevant to the  function's operations, such as a file descriptor, number of bytes processed, or a pointer to some data. Additionally, many functions that can fail return some predefined value indicating that an error occurred during the function's execution. Unfortunately, many programmers have the bad habit of not checking these return values for such error conditions, which can lead to undesirable behaviors, such as the program crashing or hanging. In our work, we used library interposition to intercept system/library calls in order to force an error value to randomly be returned to an application. In doing so, we were able to evaluate the robustness of these applications to returned error values.
 
-We were primarily interested in finding crashes in the applications that we tested. By a crash we mean either an unintentional core dump or a hang that could only be ended by forcing the application to terminate (usually by using by a Ctrl-C command). This is a somewhat narrower definition than what is commonly used, but it allowed us to quantify crashes in an unambiguous way. Furthermore, these two cases represent situations where an application terminated without its consent. We require the core dump to be unintentional because core dumps can occur within a programs control, such as with \texttt{abort} or \texttt{assert}. These are somewhat inelegant ways of handling errors, but it does not represent a crash as we define it. Similarly, nearly all of the applications we tested displayed aberrant output that is likely not the behavior the developers intended, but this is simply our opinion and is not something that can be meaningfully measured. Nevertheless, we do include some of the more interesting non-crash behaviors that we found. ROADMAP
+Error handling takes many forms in the programs that were tested. For example, one of the simplest techniques (though not exactly considered the ``best practice'') is to simply \texttt{abort()} on error, or \texttt{assert} that an error was not returned. Although these are inelegant ways to terminate a program, nevertheless they are \emph{intentionally} performed by the programmer. Therefore, here we have used an expanded definition of robustness to mean that the program does not crash or hang. We define ``crash'' to mean an unintentional core dump (not brought about by the programmer) and ``hang'' to mean behavior that could only be ended by forcing the application to terminate (usually with \texttt{Ctrl-C}). This narrower definition of misbehavior allowed us to quantify program behavior in an unambiguous way.
 
-It is most interesting to test for unchecked return values in both Unix utilities and large scale programs. We restricted our tests to open-source projects, so we could attempt to find the source code lines that caused the bug. We group the applications that we test into three categories: GNU core utilities, networking utilities, and large open-source projects.
+Nearly all of the applications we tested displayed aberrant output that is likely not the behavior the developers intended, but this sort of behavior was too subjective for us to meaningfully measure. Nevertheless, we do include some of the more interesting aberrant behaviors that we found while testing.
+
+In order to assess as large a representative sample of available programs as possible, we decided to focus on two major subgroups: small-scale (primarily command-line based) utilities, and large-scale (primarily GUI-based) programs. We restricted our sample to open-source projects, so as to be able to debug with source code available. Within small-scale utilities, we selected three groups to focus on: GNU Core Utilities (e.g. \texttt{ls}), the \texttt{net-tools} project (e.g. \texttt{ifconfig}), and selected other common utilties, such as \texttt{make} and \texttt{grep}. Within large-scale programs, we selected a sample of some of the largest and most common desktop programs available, such as Google Chrome, Mozilla Thunderbird, and \texttt{gcc}.
