--- a/paper/small_scale.tex
+++ b/paper/small_scale.tex
@@ -1,4 +1,4 @@
-A significant portion of the programs tested were considered to be ``small-scale'', which, although a somewhat arbitrary distinction, helped in reasoning about our results. Although some of the programs in this group are substantial in terms of lines of code, e.g. \texttt{gcc}, they are all command line programs, and most if not all of them should be familiar to the average systems programmer.
+A significant portion of the programs tested were considered to be ``small-scale'', which, although a somewhat arbitrary distinction, helped in reasoning about our results. Although some of the programs in this group are substantial in terms of lines of code, e.g. \texttt{grep}, they are all command line programs, and most if not all of them should be familiar to the average systems programmer.
 
 For small-scale utilities, we wrapped the calls listed in table \ref{lst:small_scale_wrappers}. The machine used was running RedHat Enterprise Linux version 6.8 (Santiago). The program versions are given in table \ref{tab:small_scale_versions}. For each wrapped call, all of the utilities were run 1000 times in order to cover many possible call patterns.
 
